--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.9",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
