--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "sweetalert2": "^11.6.13"
   },
